Moving lucene cache directory somewhere else.